R02 D006 - Ajutes Currículo. Formatação para impressão.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/bio/curriculo-vanessa-ribeiro.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/bio/curriculo-vanessa-ribeiro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +9,25 @@
 </head>
 <body>
     <div class="container">
-        <a class="back-to-home" href="https://vanribeiro.github.io/">←</a>
+        <div class="back-home">
+            <a class="back-to-home" href="https://vanribeiro.github.io/">←</a>
+            <a class="home bold" href="https://vanribeiro.github.io/">Voltar</a>
+        </div>
     </div>
     <div class="container">
         <aside class="bio-summary">
-            <h1 class="bio-title">VANESSA RIBEIRO</h1>
-            <span class="bio-subtitle">
-                Desenvolvedora Web 
-                Front-End Júnior
-            </span>
+            <div class="bio-pic-title">
+                <figure class="bio-picture">
+                    <img class="img-fluid" src="img/Minha foto - Filtro Mercury.png" alt="Vanessa Ribeiro">
+                </figure>
+                <div class="title-subtitle">
+                    <h1 class="bio-title">VANESSA RIBEIRO</h1>
+                    <p class="bio-subtitle subtitle-italic">
+                        Desenvolvedora Web
+                        Front-End Júnior
+                    </p>
+                </div>
+            </div>
             <div class="bio">
                 Graduada em Ciência da Computação. 
                 Conhecimento nas linguagens HTML, CSS, JavaScript e 
@@ -34,7 +44,7 @@
         <main>
             <section class="education">
                 <h4 class="section-title">EDUCAÇÃO</h4>
-                <p class="section-subtitle">2016 – Bacharel em Ciência da Computação</p>
+                <h6 class="bold">2016 – Bacharel em Ciência da Computação</h6>
                 <p class="normal-text">Universidade Anhanguera de Taubaté
                     Escreveu seu TCC sobre Desenvolvimento Web abordando 
                     dispositivos móveis e possíveis soluções de design e 
@@ -44,12 +54,12 @@
             <section class="projects">
                 <h4 class="section-title">PROJETOS</h4>
                 <section class="sub-section">
-                    <p class="section-subtitle">Site Portfólio</p>
+                    <h6 class="bold">Site Portfólio</h6>
                     <a class="subtitle-italic" href="https://vanribeiro.github.io/" class="link-subtitle">https://vanribeiro.github.io/</a>
                     <p class="normal-text">Criado utilizando o Framework Twitter Bootstrap e hospedado no GitHub Pages.</p>
                 </section>
                 <section class="sub-section">
-                    <p class="section-subtitle">Sites para Estudo</p>
+                    <h6 class="bold">Sites para Estudo</h6>
                     <a class="subtitle-italic" href="https://vanribeiro.github.io/portfolio">https://vanribeiro.github.io/portfolio</a>
                     <p class="normal-text">Criação de sites fictícios, sobre assuntos variados,
                         com o objetivo de treinar e estudar assuntos como HTML, CSS e JavaScript.
@@ -68,7 +78,7 @@
             </section>
             <section class="work-experience">
                 <h4 class="section-title">EXPERIÊNCIA PROFISSIONAL</h4>
-                <p class="bold">Companhia de Transmissão Paulista (CTEEP)</p>
+                <p class="section-subtitle">Companhia de Transmissão Paulista (CTEEP)</p>
                 <p class="subtitle-italic">Assistente Administrativo Junior</p>
                 <p>Julho/2009 – Setembro/2013</p>
                 <p>Correspondência, atendimento interno, suporte regional ao departamento de Recursos Humanos da Sede,
@@ -79,7 +89,7 @@
             <section class="volunteer">
                 <h4 class="section-title">TRABALHO VOLUNTÁRIO</h4>
                 <section class="sub-section">
-                    <p class="bold">Igreja Apostólica Hosana</p>
+                    <p class="section-subtitle">Igreja Apostólica Hosana</p>
                     <p class="subtitle-italic">Gerenciamento de Mídias Sociais</p>
                     <p>Outubro/2017 – Março/2018</p>
                     <p class="normal-text">Gerenciar, juntamente com uma equipe, as redes sociais dessa entidade, 
