Correcões no curriculo-vanessa-ribeiro.html.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/bio/curriculo-vanessa-ribeiro.html
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/bio/curriculo-vanessa-ribeiro.html
@@ -68,8 +68,8 @@
             </section>
             <section class="skills">
                 <h4 class="section-title">HABILIDADES TÉCNICAS</h4>
-                <p class="normal-text"><span class="bold">Forte: </span>HTML, CSS, Git</p>
-                <p class="normal-text"><span class="bold">Conhecedora: </span> JavaScript, GitHub, Twitter Bootstrap, Inkscape </p>
+                <p class="normal-text"><strong>Forte:</strong> </span>HTML, CSS, Git</p>
+                <p class="normal-text"> <strong>Conhecedora:</strong>   JavaScript, GitHub, Twitter Bootstrap, Inkscape </p>
             </section>
             <section class="languages">
                 <h4 class="section-title">IDIOMAS</h4>
